kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: codepathfinder
  labels:
    name: codepathfinder
    environment: production
