kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codepathfinder-service
  namespace: codepathfinder
  labels:
    app: codepathfinder
spec:
  type: NodePort
  selector:
    app: codepathfinder
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
